# mythistorima

./: .gitignore  DESIGN.md  README.md  i18n.config.ts  nuxt.config.ts  package.json
app/: app.config.ts  app.vue
app/composables/: useAppShortcuts.ts  useAutoSave.ts  useCharacterCount.ts  useProjectWorkspaceContext.ts  useTauriInvoke.ts  (+1 more)
scripts/: phase2-week11-performance.mjs  ui-sprint0-audit.mjs  ui-sprint1-audit.mjs  ui-sprint2-audit.mjs  ui-sprint3-audit.mjs  ui-sprint4-audit.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  appearance.rs  backup.rs  card.rs  document.rs  export.rs  export_template.rs  foreshadow.rs  import.rs  mod.rs  note.rs  outline.rs  project.rs  proofreading.rs  relation.rs  search.rs  settings.rs  stats.rs  timeline.rs
src-tauri/src/db/: connection.rs  migrations.rs
src-tauri/src/models/: appearance.rs  asset.rs  backup.rs  card.rs  command_palette.rs  document.rs  export.rs  export_template.rs  foreshadow.rs  import.rs  mod.rs  note.rs  outline.rs  project.rs  proofreading.rs  relation.rs  search.rs  settings.rs  stats.rs  tag.rs  timeline.rs
src-tauri/src/services/: appearance_service.rs  backup_service.rs  card_service.rs  document_service.rs  export_service.rs  export_template_service.rs  foreshadow_service.rs  import_service.rs  mod.rs  note_service.rs  outline_service.rs  project_service.rs  proofreading_service.rs  publication_export_service.rs  relation_service.rs  search_service.rs  settings_service.rs  stats_service.rs  timeline_service.rs
(+217 files in other folders)
