[package]
name = "mythistorima"
version = "0.1.0"
description = "A local writing workspace for novelists"
authors = ["Likos-Lupus", "Chiloven945"]
edition = "2024"

[lib]
name = "mythistorima_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "chrono", "uuid", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
regex = "1"
zip = { version = "=0.6.6", default-features = false, features = ["deflate"] }
